# auto-eda-pro

./: .gitignore  README.md  pyproject.toml  test_correlation.py  test_detect.py  test_missing.py  test_outliers.py  test_summary.py  test_visuals.py
.github/workflows/: ci.yml
auto_eda_pro_app/: __init__.py  app.py
auto_eda_pro_app/app_pages/: correlations.py  distributions.py  missing.py  outliers.py  overview.py
examples/: messy_csv_generator.py  messy_dataset.csv
outputs/: correlation_matrix.csv  missing_summary.csv  summary_stats.csv
outputs/outliers/: iqr_mask.csv  zscore_mask.csv
src/auto_eda_pro/: __init__.py  correlation.py  data.py  missing.py  outliers.py  summary.py  types.py  visuals.py
tools/: auto_eda.py
