[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-eda-pro"
version = "0.0.1"
description = "Reusable EDA pipeline focused on Matplotlib + Seaborn (Titanic & Iris examples)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas>=1.5",
  "numpy>=1.24",
  "matplotlib>=3.6",
  "seaborn>=0.12",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "streamlit", "click"]
